--- a/templates/cloud_init.single.yaml
+++ b/templates/cloud_init.single.yaml
@@ -28,6 +28,7 @@ write_files:
     IPADDR=ETH0_IPADDRESS
     HWADDR=ETH0_MAC
     GATEWAY=ETH0_GATEWAY
+    PREFIX=24
     ONBOOT=yes
     STARTMODE=auto
     TYPE=Ethernet
